--- a/tag_backend/pom.xml
+++ b/tag_backend/pom.xml
@@ -16,6 +16,8 @@
     <properties>
         <java.version>1.8</java.version>
         <hbase-spring-boot>1.0.0.RELEASE</hbase-spring-boot>
+        <hadoop.version>3.0.0-cdh6.3.2</hadoop.version>
+        <hbase.version>2.1.0-cdh6.3.2</hbase.version>
     </properties>
     <dependencies>
         <dependency>
@@ -60,6 +62,36 @@
             <artifactId>spring-boot-starter-hbase</artifactId>
             <version>${hbase-spring-boot}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>${hbase.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-common</artifactId>
+            <version>${hbase.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>${hbase.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-mapreduce</artifactId>
+            <version>${hbase.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.9</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -70,5 +102,24 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>ali-repo</id>
+            <name>ali-repo</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>cdh-repo</id>
+            <name>cdh-repo</name>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+        </repository>
+        <repository>
+            <id>hdp-repo</id>
+            <name>hdp-repo</name>
+            <url>http://repo.hortonworks.com/content/groups/public/</url>
+        </repository>
+    </repositories>
 
 </project>
