--- a/tag_vue/package.json
+++ b/tag_vue/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "echarts": "^5.1.2",
+    "echarts-wordcloud": "^2.0.0",
     "element-ui": "^2.15.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
