--- a/tag_vue/package.json
+++ b/tag_vue/package.json
@@ -18,6 +18,7 @@
     "echarts-wordcloud": "^2.0.0",
     "element-ui": "^2.15.2",
     "vue": "^2.5.2",
+    "vue-json-viewer": "^2.2.19",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
